--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                         <label for="phone">Phone number</label>
                     </div>
                     <!-- Submit Button-->
-                    <div class="d-grid"><button class="btn btn-primary rounded-pill btn-sm disabled" id="submitButton" type="submit">Submit</button></div>
+                    <div class="d-grid"><button class="btn btn-primary rounded-pill btn-sm" id="submitButton" type="submit">Submit</button></div>
                 </form>
             </div>
         </section>
