--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li class="nav-item"><a class="nav-link me-lg-3" href="/faq.html">FAQ</a></li>
                         <li class="nav-item"><a class="nav-link me-lg-3" href="/privacy-policy.html">Privacy Policy</a></li>
                     </ul>
-                    <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="#contactForm">
+                    <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="/#contact">
                         <span class="d-flex align-items-center">
                             <i class="bi-phone me-2"></i>
                             <span class="small">Book a call</span>
@@ -47,20 +47,17 @@
                     <div class="col-lg-6">
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                            <h1 class="display-1 lh-1 mb-3">Make Me Debt Free<br>helps you live peacefully.</h1>
+                            <h1 class="display-1 lh-1 mb-3">Make Me Debt Free<br>gives peace of mind.</h1>
                             <p class="lead fw-normal text-muted mb-5">Do you feel your debts taking your happiness away?<br>Experts at Make Me Debt Free help you by taking care of all the thing on your behalf. So that you can lead a happy life with family.</p>
                             <!-- <div class="d-flex flex-column flex-lg-row align-items-center"> -->
                                 <!-- <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><div class="d-grid gap-2">
                                   <button type="button" name="" id="" class="btn btn-primary">?</button>
                                 </div></a> -->
-                                <a href="#contactForm"><button class="btn btn-primary">Get a call</button></a>
+                                <a href="/#contact"><button class="btn btn-primary">Get a call</button></a>
                             <!-- </div> -->
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%" >
-                            <source src=""/>
-                        </video>
                         <!-- Masthead device mockup feature -->
                         <div class="masthead-device-mockup">
                             <svg class="circle" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
@@ -81,10 +78,6 @@
                             <div class="device-wrapper">
                                 <div class="device" data-device="iPhoneX" data-orientation="portrait" data-color="black">
                                     <div class="screen bg-black">
-                                        <!-- PUT CONTENTS HERE: -->
-                                        <!-- * * This can be a video, image, or just about anything else.-->
-                                        <!-- * * Set the max width of your media to 100% and the height to-->
-                                        <!-- * * 100% like the demo example below.-->
                                         <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="assets/VN20220816_191116(0).mp4" type="video/mp4" /></video>
                                     </div>
                                 </div>
@@ -117,7 +110,7 @@
                                     <div class="text-center">
                                         <i class="bi-phone icon-feature text-gradient d-block mb-3"></i>
                                         <h3 class="font-alt">Over the phone advice</h3>
-                                        <p class="text-muted mb-0">You are just a phone call away from the solution of your debts. <br><a href="#contactForm" class="nav-link">Book a call now.</a></p>
+                                        <p class="text-muted mb-0">You are just a phone call away from the solution of your debts. <br><a href="/#contact" class="nav-link">Book a call now.</a></p>
                                     </div>
                                 </div>
                                 <div class="col-md-6 mb-5">
@@ -149,34 +142,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="col-lg-4 order-lg-0"> -->
-                        <!-- Features section device mockup-->
-                        <!-- <div class="features-device-mockup">
-                            <svg class="circle" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                                <defs>
-                                    <linearGradient id="circleGradient" gradientTransform="rotate(45)">
-                                        <stop class="gradient-start-color" offset="0%"></stop>
-                                        <stop class="gradient-end-color" offset="100%"></stop>
-                                    </linearGradient>
-                                </defs>
-                                <circle cx="50" cy="50" r="50"></circle></svg
-                            ><svg class="shape-1 d-none d-sm-block" viewBox="0 0 240.83 240.83" xmlns="http://www.w3.org/2000/svg">
-                                <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(120.42 -49.88) rotate(45)"></rect>
-                                <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(-49.88 120.42) rotate(-45)"></rect></svg
-                            ><svg class="shape-2 d-none d-sm-block" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><circle cx="50" cy="50" r="50"></circle></svg>
-                            <div class="device-wrapper">
-                                <div class="device" data-device="iPhoneX" data-orientation="portrait" data-color="black">
-                                    <div class="screen bg-black"> -->
-                                        <!-- PUT CONTENTS HERE:-->
-                                        <!-- * * This can be a video, image, or just about anything else.-->
-                                        <!-- * * Set the max width of your media to 100% and the height to-->
-                                        <!-- * * 100% like the demo example below.-->
-                                        <!-- <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="assets/VN20220816_191116(0).mp4" type="video/mp4" /></video>
-                                    </div>
-                                </div>
-                            </div> -->
-                        <!-- </div> -->
-                    <!-- </div> -->
                 </div>
             </div>
         </section>
@@ -203,32 +168,59 @@
                         <br />
                         Let's do it with experts.
                     </h2>
-                    <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="#contactForm">Get a call</a>
+                    <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="/#contact">Get a call</a>
                 </div>
             </div>
         </section>
         <!-- App badge section-->
         <section class="bg-gradient-primary-to-secondary" id="contact">
-            <div class="container px-5">
-                <h2 class="text-center text-white font-alt mb-4">Get a call now!</h2>
+            <div class="col-lg-5 p-5 mx-auto bg-light">
+                <h2 class="text-center text-primary font-alt mb-4">Get a call now!</h2>
                 <form id="contactForm" method="post" data-netlify="true" data-netlify-recaptcha="true">
                     <!-- Name input-->
-                    <div class="form-floating mb-3">
-                        <input class="form-control" id="name" name="name" type="text" placeholder="Enter your name..." required />
-                        <label for="name">Full name</label>
+                    <div class="mb-3">
+                        <label for="name mb-3">Full name</label>
+                        <input class="form-control" id="name" name="name" type="text" placeholder="Enter your name" required />
                     </div>
                     <!-- Email address input-->
-                    <div class="form-floating mb-3">
-                        <input class="form-control" id="email" name="email" type="email" placeholder="name@example.com" required />
+                    <div class="mb-3">
                         <label for="email">Email address</label>
+                        <input class="form-control" id="email" name="email" type="email" placeholder="name@example.com" required />
                     </div>
                     <!-- Phone number input-->
-                    <div class="form-floating mb-3">
-                        <input class="form-control" id="phone" name="phone" type="tel" placeholder="(123) 456-7890" required />
+                    <div class="mb-3">
                         <label for="phone">Phone number</label>
+                        <input class="form-control" id="phone" name="phone" type="tel" placeholder="(123) 456-7890" required />
+                    </div>
+                    <div class="mb-3">
+                        <label for="postcode">Postcode*</label>
+                        <input class="form-control" id="postcode" name="postcode" type="text" placeholder="postcode" required />
+                    </div>
+                    <div class="mb-3">
+                        <label for="residential-status">What's your residential status?</label>
+                        <select class="form-control" id="residential-status" name="residential-status" type="text" placeholder="Home owner/Private Tenant/Lodging" required >
+                            <option value="Home-owner">Home Owner</option>
+                            <option value="Private-tenant">Private Tenant</option>
+                            <option value="Lodging">Lodging</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="income">How much is your monthly household income? ie: wages, benefits.</label>
+                        <input class="form-control" id="income" name="income" type="text" placeholder="income" required />
+                    </div>
+                    <div class="mb-3">
+                        <label for="total-debts">How much do you owe in total to your creditors, roughly?</label>
+                        <select class="form-control" id="total-debts" name="total-debts" type="total-debts" placeholder="" required >
+                            <option value="2000 - 4000">£2000 - £4000</option>
+                            <option value="4000 - 6000">£4000 - £6000</option>
+                            <option value="6000 or more">£6000 or more</option>
+
+                        </select>
                     </div>
                     <!-- Submit Button-->
-                    <div class="d-grid"><button class="btn btn-primary rounded-pill btn-sm" id="submitButton" type="submit">Submit</button></div>
+                    <div class="d-grid mb-3">
+                        <button class="btn btn-success rounded-pill btn-lg" id="submitButton" type="submit">Submit</button>
+                    </div>
                 </form>
             </div>
         </section>
@@ -247,10 +239,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
