--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <section class="bg-gradient-primary-to-secondary" id="contact">
             <div class="col-lg-5 p-5 mx-auto bg-light">
                 <h2 class="text-center text-primary font-alt mb-4">Get a call now!</h2>
-                <form id="contactForm" method="post" data-netlify="true" data-netlify-recaptcha="true">
+                <form id="contactForm" method="post" data-netlify="true">
                     <!-- Name input-->
                     <div class="mb-3">
                         <label for="name mb-3">Full name</label>
@@ -194,11 +194,11 @@
                     </div>
                     <div class="mb-3">
                         <label for="postcode">Postcode*</label>
-                        <input class="form-control" id="postcode" name="postcode" type="text" placeholder="postcode" required />
+                        <input class="form-control" id="postcode" name="postcode" type="text" placeholder="postcode"  />
                     </div>
                     <div class="mb-3">
                         <label for="residential-status">What's your residential status?</label>
-                        <select class="form-control" id="residential-status" name="residential-status" type="text" placeholder="Home owner/Private Tenant/Lodging" required >
+                        <select class="form-control" id="residential-status" name="residential-status" type="text" placeholder="Home owner/Private Tenant/Lodging"  >
                             <option value="Home-owner">Home Owner</option>
                             <option value="Private-tenant">Private Tenant</option>
                             <option value="Lodging">Lodging</option>
@@ -206,11 +206,11 @@
                     </div>
                     <div class="mb-3">
                         <label for="income">How much is your monthly household income? ie: wages, benefits.</label>
-                        <input class="form-control" id="income" name="income" type="text" placeholder="income" required />
+                        <input class="form-control" id="income" name="income" type="text" placeholder="income"  />
                     </div>
                     <div class="mb-3">
                         <label for="total-debts">How much do you owe in total to your creditors, roughly?</label>
-                        <select class="form-control" id="total-debts" name="total-debts" type="total-debts" placeholder="" required >
+                        <select class="form-control" id="total-debts" name="total-debts" type="total-debts" placeholder=""  >
                             <option value="2000 - 4000">£2000 - £4000</option>
                             <option value="4000 - 6000">£4000 - £6000</option>
                             <option value="6000 or more">£6000 or more</option>
