--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <section class="bg-gradient-primary-to-secondary" id="contact">
             <div class="col-lg-5 p-5 mx-auto bg-light">
                 <h2 class="text-center text-primary font-alt mb-4">Get a call now!</h2>
-                <form id="contactForm" method="post" data-netlify="true">
+                <form id="leadGen" method="post" data-netlify="true">
                     <!-- Name input-->
                     <div class="mb-3">
                         <label for="name mb-3">Full name</label>
