--- a/index.html
+++ b/index.html
@@ -214,8 +214,17 @@
                             <option value="2000 - 4000">£2000 - £4000</option>
                             <option value="4000 - 6000">£4000 - £6000</option>
                             <option value="6000 or more">£6000 or more</option>
-
                         </select>
+                        
+                    </div>
+                    <div class="mb-3">
+                        <label for="payment-missed">Have you missed any payments?</label>
+                        <br>
+                        <input type="radio" id="payment-missed" name="payment-missed" value="Yes">
+                        <label for="Yes">Yes</label>
+                        <br>
+                        <input type="radio" id="payment-missed" name="payment-missed" value="No">
+                        <label for="No">No</label>
                     </div>
                     <!-- Submit Button-->
                     <div class="d-grid mb-3">
