--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
+        <meta name="keywords" content="debt management, DRO, dro, IVA, iva, individual voluntary arrangement, ">
         <title>Make Me Debt Free</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -47,7 +48,7 @@
                     <div class="col-lg-6">
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                            <h1 class="display-1 lh-1 mb-3">Make Me Debt Free<br>gives peace of mind.</h1>
+                            <h1 class="display-1 lh-1 mb-3">Make Me Debt Free<br>gives a peace of mind.</h1>
                             <p class="lead fw-normal text-muted mb-5">Do you feel your debts taking your happiness away?<br>Experts at Make Me Debt Free help you by taking care of all the thing on your behalf. So that you can lead a happy life with family.</p>
                             <!-- <div class="d-flex flex-column flex-lg-row align-items-center"> -->
                                 <!-- <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><div class="d-grid gap-2">
@@ -101,46 +102,77 @@
         <!-- App features section-->
         <section id="features">
             <div class="container px-5">
-                <div class="row gx-5 align-items-center">
-                    <div class="col-lg-8 order-lg-1 mb-5 mb-lg-0 mx-auto">
-                        <div class="container-fluid px-5">
-                            <div class="row gx-5">
-                                <div class="col-md-6 mb-5">
-                                    <!-- Feature item-->
-                                    <div class="text-center">
-                                        <i class="bi-phone icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Over the phone advice</h3>
-                                        <p class="text-muted mb-0">You are just a phone call away from the solution of your debts. <br><a href="/#contact" class="nav-link">Book a call now.</a></p>
-                                    </div>
-                                </div>
-                                <div class="col-md-6 mb-5">
-                                    <!-- Feature item-->
-                                    <div class="text-center">
-                                        <i class="bi-envelope icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Send docs on email</h3>
-                                        <p class="text-muted mb-0">Put an image, video, animation, or anything else in the screen!</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6 mb-5 mb-md-0">
-                                    <!-- Feature item-->
-                                    <div class="text-center">
-                                        <i class="bi-asterisk icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Get tailor made solution</h3>
-                                        <p class="text-muted mb-0">As always, this theme is free to download and use for any purpose!</p>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <!-- Feature item-->
-                                    <div class="text-center">
-                                        <i class="bi-patch-check icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Setup an affordable payment plan</h3>
-                                        <p class="text-muted mb-0">Since this theme is MIT licensed, you can use it commercially!</p>
-                                    </div>
-                                </div>
-                            </div>
+                <div class="row">
+                    <h2 class="text-center text-gradient font-alt mb-4 pb-3">Our Process</h2>
+                    <div class="col-md-6 col-lg-3 mb-5">
+                        <!-- Feature item-->
+                        <div class="text-center">
+                            <i class="bi-phone icon-feature text-gradient d-block mb-3"></i>
+                            <h3 class="font-alt">Over the phone advice</h3>
+                            <p class="text-muted mb-0">You are just a phone call away from the solution of your debts. <br><a href="/#contact" class="nav-link">Book a call now.</a></p>
                         </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3 mb-5">
+                        <!-- Feature item-->
+                        <div class="text-center">
+                            <i class="bi-envelope icon-feature text-gradient d-block mb-3"></i>
+                            <h3 class="font-alt">Send docs on email</h3>
+                            <p class="text-muted mb-0">Put an image, video, animation, or anything else in the screen!</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3 mb-5">
+                        <!-- Feature item-->
+                        <div class="text-center">
+                            <i class="bi-gift icon-feature text-gradient d-block mb-3"></i>
+                            <h3 class="font-alt">Get tailor made solution</h3>
+                            <p class="text-muted mb-0">As always, this theme is free to download and use for any purpose!</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3 mb-5">
+                        <!-- Feature item-->
+                        <div class="text-center">
+                            <i class="bi-patch-check icon-feature text-gradient d-block mb-3"></i>
+                            <h3 class="font-alt">Setup a payment plan</h3>
+                            <p class="text-muted mb-0">An affordable monthly payment to make the payment easy for you.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Ratings -->
+        <section class="bg-gradient-primary-to-secondary" id="ratings">
+            <div class="container p-4 mx-auto bg-light">
+                <!-- <h3 class="text-center text-primary font-alt mb-4">Best in class rating</h3> -->
+                <div class="row justify-content-center text-center mt-3">
+                    <div class="col-md-3 m-1">
+                        <div class="d-flex justify-content-center">
+                            <i class="bi bi-star-fill text-gradient"></i>
+                            <i class="bi bi-star-fill text-gradient"></i>
+                            <i class="bi bi-star-fill text-gradient"></i>
+                            <i class="bi bi-star-half text-gradient"></i>
+                            <i class="bi bi-star text-gradient"></i>
+                        </div>
+                        <p>Query resolution</p>
+                    </div>
+                    <div class="col-md-3 m-1">
+                        <div class="d-flex justify-content-center">
+                            <i class="bi bi-star-fill text-gradient"></i>
+                            <i class="bi bi-star-fill text-gradient"></i>
+                            <i class="bi bi-star-fill text-gradient"></i>
+                            <i class="bi bi-star-fill text-gradient"></i>
+                            <i class="bi bi-star-half text-gradient"></i>
+                        </div>
+                        <p>Customer support</p>
+                    </div>
+                    <div class="col-md-3 m-1">
+                        <div class="d-flex justify-content-center">
+                            <i class="bi bi-star-fill text-gradient"></i>
+                            <i class="bi bi-star-fill text-gradient"></i>
+                            <i class="bi bi-star-fill text-gradient"></i>
+                            <i class="bi bi-star-fill text-gradient"></i>
+                            <i class="bi bi-star text-gradient"></i>
+                        </div>
+                        <p>Efficiency rating</p>
                     </div>
                 </div>
             </div>
@@ -175,7 +207,7 @@
         <!-- App badge section-->
         <section class="bg-gradient-primary-to-secondary" id="contact">
             <div class="col-lg-5 p-5 mx-auto bg-light">
-                <h2 class="text-center text-primary font-alt mb-4">Get a call now!</h2>
+                <h2 class="text-center text-primary font-alt mb-4 text-gradient">Get a call now!</h2>
                 <form id="leadGen" method="post" data-netlify="true">
                     <!-- Name input-->
                     <div class="mb-3">
