--- a/get-a-call-success.html
+++ b/get-a-call-success.html
@@ -40,64 +40,6 @@
                 </div>
             </div>
         </nav>
-        <!-- Mashead header-->
-        <header class="masthead">
-            <div class="container px-5">
-                <div class="row gx-5 align-items-center">
-                    <div class="col-lg-6">
-                        <!-- Mashead text and app badges-->
-                        <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                            <h1 class="display-1 lh-1 mb-3">Make Me Debt Free<br>gives peace of mind.</h1>
-                            <p class="lead fw-normal text-muted mb-5">Do you feel your debts taking your happiness away?<br>Experts at Make Me Debt Free help you by taking care of all the thing on your behalf. So that you can lead a happy life with family.</p>
-                            <!-- <div class="d-flex flex-column flex-lg-row align-items-center"> -->
-                                <!-- <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><div class="d-grid gap-2">
-                                  <button type="button" name="" id="" class="btn btn-primary">?</button>
-                                </div></a> -->
-                                <a href="/#contact"><button class="btn btn-primary">Get a call</button></a>
-                            <!-- </div> -->
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <!-- Masthead device mockup feature -->
-                        <div class="masthead-device-mockup">
-                            <svg class="circle" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                                <defs>
-                                    <linearGradient id="circleGradient" gradientTransform="rotate(45)">
-                                        <stop class="gradient-start-color" offset="0%"></stop>
-                                        <stop class="gradient-end-color" offset="100%"></stop>
-                                    </linearGradient>
-                                </defs>
-                                <circle cx="50" cy="50" r="50"></circle>
-                            </svg>
-                            <svg class="shape-1 d-none d-sm-block" viewBox="0 0 240.83 240.83" xmlns="http://www.w3.org/2000/svg">
-                                <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(120.42 -49.88) rotate(45)"></rect>
-                                <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(-49.88 120.42) rotate(-45)"></rect>
-                            </svg>
-                            <svg class="shape-2 d-none d-sm-block" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><circle cx="50" cy="50" r="50"></circle>
-                            </svg>
-                            <div class="device-wrapper">
-                                <div class="device" data-device="iPhoneX" data-orientation="portrait" data-color="black">
-                                    <div class="screen bg-black">
-                                        <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="assets/VN20220816_191116(0).mp4" type="video/mp4" /></video>
-                                    </div>
-                                </div>
-                            </div> -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </header>
-        <!-- Quote/testimonial aside-->
-        <aside class="text-center bg-gradient-primary-to-secondary">
-            <div class="container px-5">
-                <div class="row gx-5 justify-content-center">
-                    <div class="col-xl-11">
-                        <div class="h2 fs-1 text-white mb-4">An intuitive solution to the debt problems of citizens across the UK is wrapped up in a single digital window, called as <br> “Make Me Debt Free”!</div>
-                        <img src="assets/img/mmdf.png" alt="..." style="height: 6rem" />
-                    </div>
-                </div>
-            </div>
-        </aside>
         <!-- App features section-->
         <section id="features">
             <div class="container px-5">
@@ -105,38 +47,12 @@
                     <div class="col-lg-8 order-lg-1 mb-5 mb-lg-0 mx-auto">
                         <div class="container-fluid px-5">
                             <div class="row gx-5">
-                                <div class="col-md-6 mb-5">
+                                <div class="col mt-5 mb-5">
                                     <!-- Feature item-->
                                     <div class="text-center">
-                                        <i class="bi-phone icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Over the phone advice</h3>
-                                        <p class="text-muted mb-0">You are just a phone call away from the solution of your debts. <br><a href="/#contact" class="nav-link">Book a call now.</a></p>
-                                    </div>
-                                </div>
-                                <div class="col-md-6 mb-5">
-                                    <!-- Feature item-->
-                                    <div class="text-center">
-                                        <i class="bi-envelope icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Send docs on email</h3>
-                                        <p class="text-muted mb-0">Put an image, video, animation, or anything else in the screen!</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6 mb-5 mb-md-0">
-                                    <!-- Feature item-->
-                                    <div class="text-center">
-                                        <i class="bi-asterisk icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Get tailor made solution</h3>
-                                        <p class="text-muted mb-0">As always, this theme is free to download and use for any purpose!</p>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <!-- Feature item-->
-                                    <div class="text-center">
-                                        <i class="bi-patch-check icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Setup an affordable payment plan</h3>
-                                        <p class="text-muted mb-0">Since this theme is MIT licensed, you can use it commercially!</p>
+                                        <h1><i class="bi-check-circle icon-feature text-gradient d-block mb-3" height="9rem"></i></h1>
+                                        <h3 class="font-alt">Great! You have successfully booked a call.</h3>
+                                        <p class="text-muted mb-0">You will get a call from one of our experts.</p>
                                     </div>
                                 </div>
                             </div>
@@ -145,94 +61,17 @@
                 </div>
             </div>
         </section>
-        <!-- Basic features section-->
-        <section class="bg-light">
+        <!-- Mashead header-->
+        <!-- Quote/testimonial aside-->
+        <aside class="text-center bg-gradient-primary-to-secondary">
             <div class="container px-5">
-                <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
-                    <div class="col-12 col-lg-5">
-                        <h2 class="display-4 lh-1 mb-4">Enter a new age of debt management</h2>
-                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">This section is perfect for featuring some information about your application, why it was built, the problem it solves, or anything else! There's plenty of space for text here, so don't worry about writing too much.</p>
-                    </div>
-                    <div class="col-sm-8 col-md-6">
-                        <div class="px-5 px-sm-0"><img class="img-fluid" src="https://media.istockphoto.com/photos/man-using-calculator-picture-id1309118129?b=1&k=20&m=1309118129&s=170667a&w=0&h=GpEJosOsm_-qFLxZ31YA3I8u4UuxaHccyEwWmcXKLbU=" height="900rem" width="900rem" alt="..." /></div>
+                <div class="row gx-5 justify-content-center">
+                    <div class="col-xl-11">
+                        <img src="assets/img/mmdf.png" alt="Make Mee Debt Free Logo" style="height: 6rem" />
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- Call to action section-->
-        <section class="cta">
-            <div class="cta-content">
-                <div class="container px-5">
-                    <h2 class="text-white display-1 lh-1 mb-4">
-                        Stop worrying.
-                        <br />
-                        Let's do it with experts.
-                    </h2>
-                    <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="/#contact">Get a call</a>
-                </div>
-            </div>
-        </section>
-        <!-- App badge section-->
-        <section class="bg-gradient-primary-to-secondary" id="contact">
-            <div class="col-lg-5 p-5 mx-auto bg-light">
-                <h2 class="text-center text-primary font-alt mb-4">Get a call now!</h2>
-                <form id="leadGen" method="post" data-netlify="true">
-                    <!-- Name input-->
-                    <div class="mb-3">
-                        <label for="name mb-3">Full name</label>
-                        <input class="form-control" id="name" name="name" type="text" placeholder="Enter your name" required />
-                    </div>
-                    <!-- Email address input-->
-                    <div class="mb-3">
-                        <label for="email">Email address</label>
-                        <input class="form-control" id="email" name="email" type="email" placeholder="name@example.com" required />
-                    </div>
-                    <!-- Phone number input-->
-                    <div class="mb-3">
-                        <label for="phone">Phone number</label>
-                        <input class="form-control" id="phone" name="phone" type="tel" placeholder="(123) 456-7890" required />
-                    </div>
-                    <div class="mb-3">
-                        <label for="postcode">Postcode*</label>
-                        <input class="form-control" id="postcode" name="postcode" type="text" placeholder="postcode"  />
-                    </div>
-                    <div class="mb-3">
-                        <label for="residential-status">What's your residential status?</label>
-                        <select class="form-control" id="residential-status" name="residential-status" type="text" placeholder="Home owner/Private Tenant/Lodging"  >
-                            <option value="Home-owner">Home Owner</option>
-                            <option value="Private-tenant">Private Tenant</option>
-                            <option value="Lodging">Lodging</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="income">How much is your monthly household income? ie: wages, benefits.</label>
-                        <input class="form-control" id="income" name="income" type="text" placeholder="income"  />
-                    </div>
-                    <div class="mb-3">
-                        <label for="total-debts">How much do you owe in total to your creditors, roughly?</label>
-                        <select class="form-control" id="total-debts" name="total-debts" type="total-debts" placeholder=""  >
-                            <option value="2000 - 4000">£2000 - £4000</option>
-                            <option value="4000 - 6000">£4000 - £6000</option>
-                            <option value="6000 or more">£6000 or more</option>
-                        </select>
-                        
-                    </div>
-                    <div class="mb-3">
-                        <label for="payment-missed">Have you missed any payments?</label>
-                        <br>
-                        <input type="radio" id="payment-missed" name="payment-missed" value="Yes">
-                        <label for="Yes">Yes</label>
-                        <br>
-                        <input type="radio" id="payment-missed" name="payment-missed" value="No">
-                        <label for="No">No</label>
-                    </div>
-                    <!-- Submit Button-->
-                    <div class="d-grid mb-3">
-                        <button class="btn btn-success rounded-pill btn-lg" id="submitButton" type="submit">Submit</button>
-                    </div>
-                </form>
-            </div>
-        </section>
+        </aside>
         <!-- Footer-->
         <footer class="bg-black text-center py-5">
             <div class="container px-5">
