footer design is changed

--- a/faq.html
+++ b/faq.html
@@ -21,6 +21,7 @@
         rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/custom-des.css" rel="stylesheet"/>
 </head>
 
 <body id="page-top">
@@ -49,15 +50,15 @@
     </nav>
     <!-- App features section-->
     <section id="features">
-        <div class="container-fluid text-light bg-gradient-primary-to-secondary  pt-5 pb-4 mb-4">
+        <div class="container-fluid text-light bg-gradient-primary-to-secondary pt-5 pb-4 mb-4">
             <h1 class="text-center">FAQ's</h1>
         </div>
         <div class="container px-5">
             <div>
                 <div class="qna">
-                    <h2>What information do we collect?</h2>
+                    <h2 class="bg-gradient-primary-to-secondary p-3 text-white">What information do we collect?</h2>
 
-                    <p>In order to determine what solution is the best option for you, we will need to conduct an
+                    <p  class="display-none">In order to determine what solution is the best option for you, we will need to conduct an
                         assessment of your
                         current circumstances, including your income and expenses. To make the assessment as
                         straightforward as
@@ -67,7 +68,7 @@
                         expenses, you can use
                         your bank statements for the last three months to calculate what you're paying for items like:
                     </p>
-                    <ul>
+                    <ul class="display-none">
                         <li>utility bills</li>
                         <li>rent/mortgage</li>
                         <li>travel costs</li>
@@ -75,19 +76,18 @@
                         <li>childcare</li>
                     </ul>
 
-                    <p>If you can't get this altogether before we speak to you, don't worry! If you're not sure on
+                    <p  class="display-none">If you can't get this altogether before we speak to you, don't worry! If you're not sure on
                         anything, our
                         specialist friendly team will be happy to help.</p>
                 </div>
-                <br>
                 <div class="qna">
-                    <h2>Where can i find details of my debts?</h2>
+                    <h2  class="bg-gradient-primary-to-secondary p-3 text-white">Where can i find details of my debts?</h2>
 
-                    <p>If you know who you owe money to, you can contact creditors for up-to-date debt balances. If
+                    <p  class="display-none">If you know who you owe money to, you can contact creditors for up-to-date debt balances. If
                         you're unsure, you
                         can get a copy of your credit report from one of three credit reference agencies:
                     </p>
-                    <ul>
+                    <ul class="display-none">
                         <li>TransUnion (formerly Call Credit)</li>
                         <li>Experian</li>
                         <li>Equifax</li>
@@ -95,13 +95,13 @@
                 </div>
 
                 <div class="qna">
-                    <h2>I'm self employed. Can you help?</h2>
-                    <p>Absolutely, yes we can. <a>book a call</a>.</p>
+                    <h2 class="bg-gradient-primary-to-secondary p-3 text-white">I'm self employed. Can you help?</h2>
+                    <p  class="display-none">Absolutely, yes we can. <a>book a call</a>.</p>
                 </div>
 
                 <div class="qna">
-                    <h2>How will my home be afftected?</h2>
-                    <p>We understand that most people will want a debt solution that will mean staying in their home.
+                    <h2 class="bg-gradient-primary-to-secondary p-3 text-white">How will my home be afftected?</h2>
+                    <p  class="display-none">We understand that most people will want a debt solution that will mean staying in their home.
                         There are several
                         debt solutions that won't affect assets such as your home and any equity it may have. If you're
                         insolvent and
@@ -109,8 +109,8 @@
                         might require you to
                         sell your home, remortgage or release some of the equity, depending on your individual
                         situation.</p>
-                    <br>
-                    <p>However, during your debt advice session you'll be told about the risks associated with each
+                    <br class="display-none">
+                    <p  class="display-none">However, during your debt advice session you'll be told about the risks associated with each
                         available debt
                         solution, so you can make an informed choice that's right for your situation.</p>
                 </div>
@@ -118,23 +118,23 @@
 
             <div>
                 <div class="qna">
-                    <h2>Is a DMP suitable for me?</h2>
-                    <p>A DMP may be a suitable debt solution if you have some surplus money available each month once
+                    <h2  class="bg-gradient-primary-to-secondary p-3 text-white">Is a DMP suitable for me?</h2>
+                    <p  class="display-none">A DMP may be a suitable debt solution if you have some surplus money available each month once
                         you've paid your
                         priority costs such as rent or mortgage, food, accommodation and utility bills.</p>
-                    <br>
-                    <p>We'll work with you to work out a budget that meets your household's needs. Any money left over
+                    <br class="display-none">
+                    <p  class="display-none">We'll work with you to work out a budget that meets your household's needs. Any money left over
                         will go to your
                         creditors.</p>
                 </div>
 
                 <div class="qna">
-                    <h2>Does a DMP affect my credit file?</h2>
-                    <p>A debt management plan will almost always affect your credit file and score. This is because you
+                    <h2  class="bg-gradient-primary-to-secondary p-3 text-white">Does a DMP affect my credit file?</h2>
+                    <p  class="display-none">A debt management plan will almost always affect your credit file and score. This is because you
                         usually pay less
                         than the minimum repayment amount you agreed to when you initially took the debts out.</p>
-                    <br>
-                    <p>A DMP isn't specifically registered on your credit file but the reduced payments could impact on
+                    <br class="display-none">
+                    <p  class="display-none">A DMP isn't specifically registered on your credit file but the reduced payments could impact on
                         a few different
                         areas
                         of your credit file. Details of court action, defaults or missed payments will be removed six
@@ -143,8 +143,8 @@
                         happened, even if the debt hasn't been fully repaid.</p>
                 </div>
                 <div class="qna">
-                    <h2>What debts can be included on a DMP?</h2>
-                    <p>If you're unable to keep up with payments to most credit facilities, you should be able to
+                    <h2  class="bg-gradient-primary-to-secondary p-3 text-white">What debts can be included on a DMP?</h2>
+                    <p  class="display-none">If you're unable to keep up with payments to most credit facilities, you should be able to
                         include these in your
                         DMP.
                         This includes credit cards, loans, overdrafts, catalogue accounts, payday loans and xxx. In some
@@ -154,8 +154,8 @@
                         utility bills,
                         Council
                         Tax or your rent.</p>
-                    <br>
-                    <p>If a debt cannot be included in the DMP for any reason (e.g. it's a secured debt), we will
+                    <br class="display-none">
+                    <p  class="display-none">If a debt cannot be included in the DMP for any reason (e.g. it's a secured debt), we will
                         include the amount you
                         need
                         to pay to the account in your monthly budget to make sure you can keep up with your payments.
@@ -163,16 +163,16 @@
                 </div>
 
                 <div class="qna">
-                    <h2>Is a DMP the same as debt consolidation?</h2>
-                    <p>Debt consolidation involves taking out a loan to repay all unsecured debts you may have. Usually
+                    <h2  class="bg-gradient-primary-to-secondary p-3 text-white">Is a DMP the same as debt consolidation?</h2>
+                    <p  class="display-none">Debt consolidation involves taking out a loan to repay all unsecured debts you may have. Usually
                         the loan would
                         be paid
                         back over a longer period than the debts it was taken out to repay, therefore lowering the
                         monthly payments.
                         However,
                         interest is usually charged.</p>
-                    <br>
-                    <p>A debt management plan doesn't involve taking further credit. Instead, new payment terms are
+                    <br class="display-none">
+                    <p  class="display-none">A debt management plan doesn't involve taking further credit. Instead, new payment terms are
                         agreed with your
                         creditor,
                         based on what you can afford to pay.</p>
@@ -181,18 +181,18 @@
 
             <div>
                 <div class="qna">
-                    <h2>Is an IVA suitable for me?</h2>
-                    <p>An individual voluntary arrangement is a type of insolvency and a legally binding arrangement
+                    <h2  class="bg-gradient-primary-to-secondary p-3 text-white">Is an IVA suitable for me?</h2>
+                    <p  class="display-none">An individual voluntary arrangement is a type of insolvency and a legally binding arrangement
                         between you and
                         your
                         creditors. It may be a suitable solution if you can afford to pay something to your debts, but
                         not the full
                         amount your
                         creditors want.</p>
-                    <br>
-                    <p>If you have a lump sum to pay towards your debts, you may also qualify for an IVA.</p>
-                    <br>
-                    <p>An IVA should be carefully considered because of the possible consequences for your personal,
+                    <br class="display-none">
+                    <p  class="display-none">If you have a lump sum to pay towards your debts, you may also qualify for an IVA.</p>
+                    <br class="display-none">
+                    <p  class="display-none">An IVA should be carefully considered because of the possible consequences for your personal,
                         professional and
                         financial
                         life. There are several risks that you must consider before applying which is why you should get
@@ -201,8 +201,8 @@
                 </div>
 
                 <div class="qna">
-                    <h2>Does an IVA affect my credit file?</h2>
-                    <p>IVA's are a type of insolvency and will show on your credit file for six years from the date they
+                    <h2  class="bg-gradient-primary-to-secondary p-3 text-white">Does an IVA affect my credit file?</h2>
+                    <p  class="display-none">IVA's are a type of insolvency and will show on your credit file for six years from the date they
                         begin. During
                         this
                         time, you're likely to find it difficult to obtain credit. You must also inform your insolvency
@@ -219,31 +219,31 @@
                         for it.</p>
                 </div>
                 <div class="qna">
-                    <h2>What costs and fees are involved?</h2>
-                    <p>No matter who arranges your IVA there are associated costs and fees. Our Partners IVA costs and
+                    <h2  class="bg-gradient-primary-to-secondary p-3 text-white">What costs and fees are involved?</h2>
+                    <p class="display-none">No matter who arranges your IVA there are associated costs and fees. Our Partners IVA costs and
                         fees follow
                         industry
                         standards. All fees are agreed by you and your creditors before an IVA is approved. If at any
                         time you decide
                         not to go
                         ahead with an IVA with us, there will be no fees to pay.
-                    </p><br>
-                    <p>
+                    </p><br class="display-none">
+                    <p  class="display-none">
                         Other IVA companies may charge different fees. It's important to check and understand them
                         before going ahead.
                     </p>
                 </div>
 
                 <div class="qna">
-                    <h2>Will an IVA affect my job?</h2>
-                    <p>pSome jobs could be affected if you're on an IVA, for example:</p>
-                    <ul>
+                    <h2  class="bg-gradient-primary-to-secondary p-3 text-white">Will an IVA affect my job?</h2>
+                    <p class="display-none">Some jobs could be affected if you're on an IVA, for example:</p>
+                    <ul class="display-none">
                         <li>Company directors</li>
                         <li>Law and property roles</li>
                         <li>Finance and accountancy roles</li>
                         <li>Pub licensees</li>
                     </ul>
-                    <p>The best way to find out if an IVA or bankruptcy would impact on your job is to check with your
+                    <p class="display-none">The best way to find out if an IVA or bankruptcy would impact on your job is to check with your
                         professional
                         membership
                         body or trade union or ask to speak to your HR department confidentially. It's important to
@@ -255,12 +255,12 @@
             </div>
             <div>
                 <div class="qna">
-                    <h2>Is a DRO suitable for me?</h2>
-                    <p>DROs are specifically designed for people who have a smaller amount of debts and a lower income,
+                    <h2  class="bg-gradient-primary-to-secondary p-3 text-white">Is a DRO suitable for me?</h2>
+                    <p class="display-none">DROs are specifically designed for people who have a smaller amount of debts and a lower income,
                         and can be a
                         cheaper
                         alternative to bankruptcy. To apply for a DRO, you must:</p>
-                    <ul>
+                    <ul class="display-none">
                         <li>live in England, Wales or Northern Ireland</li>
                         <li>owe less than £20,000</li>
                         <li>have less than £1,000 in assets (and a car worth no more than £1,000)</li>
@@ -270,22 +270,22 @@
                 </div>
 
                 <div class="qna">
-                    <h2>Does a DRO affect my credit file?</h2>
-                    <p>
+                    <h2  class="bg-gradient-primary-to-secondary p-3 text-white">Does a DRO affect my credit file?</h2>
+                    <p  class="display-none">
                         A debt relief order will stay on your credit file for six years from the date it's approved.
                         This may make it
                         difficult to take out credit during this time.
                     </p>
                 </div>
                 <div class="qna">
-                    <h2>How does a DRO work?</h2>
-                    <p>A DRO freezes your debt repayments and interest for 12 months. If your financial situation hasn't
+                    <h2  class="bg-gradient-primary-to-secondary p-3 text-white">How does a DRO work?</h2>
+                    <p  class="display-none">A DRO freezes your debt repayments and interest for 12 months. If your financial situation hasn't
                         changed at the
                         end of this period, then all the debts included will be written off.</p>
                 </div>
                 <div class="qna">
-                    <h2>How much does a DRO cost?</h2>
-                    <p>
+                    <h2  class="bg-gradient-primary-to-secondary p-3 text-white">How much does a DRO cost?</h2>
+                    <p  class="display-none">
                         A DRO costs £90, which is the amount charged by the Insolvency Service to process an
                         application. You can't get
                         any
@@ -306,13 +306,30 @@
     </section>
     
     <!-- Footer-->
-    <footer class="bg-black text-center py-5">
+    <footer class="bg-black py-5">
         <div class="container px-5">
-            <div class="text-white-50 small">
-                <div class="mb-2">&copy;makemedebtfree.co.uk 2022. All Rights Reserved.</div>
-                <a href="privacy-policy.html">Privacy Policy</a>
-                <span class="mx-1">&middot;</span>
-                <a href="faq.html">FAQ</a>
+            <div class="row justify-content-lg-between">
+                <div class="col-lg-3 col-md-4">
+                    <p class="text-warning">BROWSE</p>
+                    <ul class="list-unstyled">
+                        <li class=""><a href="/#about" class="">About</a></li>
+                        <li><a href="/faq.html">FAQ</a></li>
+                        <li><a href="/privacy-policy.html">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-4">
+                    <p class="text-warning">ABOUT US</p>
+                    <p class="text-white-50">Make Me Debt Free is a company which provides debts advice and solutions. We are in colaboration with different companies and organisations.</p>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <p class="text-warning">CONTACT INFORMATION</p>
+                    <br>
+                    <p></p>
+
+                </div>
+            </div>
+            <div class="text-white-50 small text-center">
+                <div class="mb-0">&copy;makemedebtfree.co.uk 2022. All Rights Reserved.</div>
             </div>
         </div>
     </footer>
@@ -320,7 +337,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 
 </html>
