--- a/get-a-call-success.html
+++ b/get-a-call-success.html
@@ -16,6 +16,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;1,400&amp;display=swap" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/custom-des.css" rel="stylesheet"/>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -73,13 +74,30 @@
             </div>
         </aside>
         <!-- Footer-->
-        <footer class="bg-black text-center py-5">
+        <footer class="bg-black py-5">
             <div class="container px-5">
-                <div class="text-white-50 small">
-                    <div class="mb-2">&copy;makemedebtfree.co.uk 2022. All Rights Reserved.</div>
-                    <a href="privacy-policy.html">Privacy Policy</a>
-                    <span class="mx-1">&middot;</span>
-                    <a href="faq.html">FAQ</a>
+                <div class="row justify-content-lg-between">
+                    <div class="col-lg-3 col-md-4">
+                        <p class="text-warning">BROWSE</p>
+                        <ul class="list-unstyled">
+                            <li class=""><a href="/#about" class="">About</a></li>
+                            <li><a href="/faq.html">FAQ</a></li>
+                            <li><a href="/privacy-policy.html">Privacy Policy</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 col-md-4">
+                        <p class="text-warning">ABOUT US</p>
+                        <p class="text-white-50">Make Me Debt Free is a company which provides debts advice and solutions. We are in colaboration with different companies and organisations.</p>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <p class="text-warning">CONTACT INFORMATION</p>
+                        <br>
+                        <p></p>
+    
+                    </div>
+                </div>
+                <div class="text-white-50 small text-center">
+                    <div class="mb-0">&copy;makemedebtfree.co.uk 2022. All Rights Reserved.</div>
                 </div>
             </div>
         </footer>
@@ -87,6 +105,5 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
